--- a/resources/configuration.properties
+++ b/resources/configuration.properties
@@ -1,4 +1,4 @@
-zookeeper.hosts=hadoop-manager:2181,hadoop-node1:2181,hadoop-node2:2181
+zookeeper.hosts=localhost:2181
 kafka.topic=test
 hbase.table.name=LoginsCount
 hbase.column.family=activeLogins
@@ -6,7 +6,7 @@ hbase.column.family=activeLogins
 #optional properties
 
 # Default 2
-storm.workers.number=1
+#storm.workers.number=
 
 # Default 2
 #storm.max.task.parallelism=
@@ -18,7 +18,7 @@ storm.execution.mode=local
 storm.topology.name=AuditActiveLoginsCount
 
 # default 2000
-#storm.topology.batch.interval.miliseconds
+#storm.topology.batch.interval.miliseconds=
 
 # Time of topology execution (only in local mode, default 20000)
 storm.local.execution.time=40000
@@ -27,7 +27,7 @@ storm.local.execution.time=40000
 #cluster properties
 
 # Storm Nimbus host and port (default localhost)
-storm.nimbus.host=streaming1
+#storm.nimbus.host=
 
 # Storm Nimbus port (default 6627)
-#storm.nimbus.port
+#storm.nimbus.port=
